refactor: re-implement exception handling and add validation