@@ -2,16 +2,19 @@ package com.github.yildizmy.service;
 
 import com.github.yildizmy.dto.mapper.EmployeeRequestMapper;
 import com.github.yildizmy.dto.response.EmployeeDto;
-import com.github.yildizmy.exception.EntityNotFoundException;
+import com.github.yildizmy.exception.NoSuchElementFoundException;
 import com.github.yildizmy.model.Employee;
 import com.github.yildizmy.repository.EmployeeRepository;
 import com.github.yildizmy.util.CsvHelper;
 import lombok.AllArgsConstructor;
+import lombok.SneakyThrows;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.util.List;
-import java.util.stream.Collectors;
+
+import static com.github.yildizmy.common.Constants.NO_ITEM_FOUND;
+import static com.github.yildizmy.common.Constants.NO_RECORD;
 
 @Service
 @AllArgsConstructor
@@ -19,27 +22,25 @@ public class EmployeeService {
 
     private final EmployeeRepository employeeRepository;
 
-    public void create(MultipartFile file) throws Exception {
-        try {
-            List<Employee> employees = CsvHelper.csvToEmployees(file.getInputStream()).stream()
-                    .map(EmployeeRequestMapper::mapToEntity)
-                    .collect(Collectors.toList());
-            employeeRepository.saveAll(employees);
-        } catch (Exception e) {
-            throw new Exception("Could not upload file: " + file.getOriginalFilename());
-        }
-    }
-
     public List<EmployeeDto> findAll() {
         return employeeRepository.findAll()
                 .stream().map(EmployeeDto::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public EmployeeDto findByEmail(String email) {
         return employeeRepository.findByEmail(email)
                 .map(EmployeeDto::new)
-                .orElseThrow(() -> new EntityNotFoundException("Employee is not found"));
+                .orElseThrow(() -> new NoSuchElementFoundException(NO_ITEM_FOUND));
+    }
+
+    @SneakyThrows
+    public void create(MultipartFile file) throws NoSuchElementFoundException {
+        List<Employee> employees = CsvHelper.csvToEmployees(file.getInputStream()).stream()
+                .map(EmployeeRequestMapper::mapToEntity)
+                .toList();
+        if (employees.isEmpty()) { throw new NoSuchElementFoundException(NO_RECORD); }
+        employeeRepository.saveAll(employees);
     }
 
     public void deleteAll() {
